# ffmpegStu

./: CMakeLists.txt  cmdOverlay.cpp  main.cpp
FileList/: fileListRead.cpp
Log/: LogStudy.cpp
adts/: adts.cpp
captureAudio/: captureAudio.cpp
decodeVideo/: convert.cpp  decodeVideo.cpp  demo.cpp  encodeVideo.cpp
encodeVideo/: convert.h  encodeVideo.cpp
extractAudio/: extractAudio.cpp
extractVideo/: demuxer_video.h  extractMp4ToH264.cpp  extractVideo.cpp
header/: adts.h
mp4toflv/: mp4toflv.cpp
recoderAndEncoder/: demo.cpp
videoMetaData/: metaInfo.cpp
